# python-flask-folder-structure-configuration

./: .env.example  .gitignore  README.md  format  pyproject.toml
app/: __init__.py  cli.py  extension.py
app/controllers/: auth_controller.py  user_controller.py
app/dao/: base_dao.py  user_dao.py
app/exceptions/: handler.py
app/factories/: base_factory.py  user_factory.py
app/helpers/: commons.py
app/middleware/: user_middleware.py
app/models/: __init__.py  base_model.py  post.py  user.py
app/request/: user_request.py
app/schema/: user_schema.py
app/seeders/: db_seed.py
app/service/: base_service.py  user_service.py
app/shared/: commons.py  database.py
app/utils/: decorators.py
config/: cors.py  database.py  jwt.py  logging.py
migrations/versions/: 1cae280ffca1_add_password.py  21de7199c24e_add_profile.py  2c8cce8e055f_add_password.py  42967658e4aa_user_table.py  91d5b1566476_add_soft_delete_and_timestamp.py  c70f992369ab_post_table.py
route/: api.py
